--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,10 @@
     "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.41",
+    "eslint-plugin-prettier": "^4.2.1",
+    "vue": "^3.2.13",
     "vue-router": "^4.1.5",
-    "vuex": "^4.1.0"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -25,7 +26,6 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "vue-cli-plugin-quasar": "~5.0.1"
+    "eslint-plugin-vue": "^8.0.3"
   }
 }
