--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
+    "ant-design-vue": "^3.2.15",
     "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
     "core-js": "^3.8.3",
     "eslint-plugin-prettier": "^4.2.1",
+    "less-loader": "^11.1.0",
     "vue": "^3.2.13",
     "vue-router": "^4.1.5",
     "vuex": "^4.0.2"
@@ -26,6 +29,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "1.32.12",
+    "sass-loader": "^12.0.0"
   }
 }
