--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
+    "ag-grid-community": "^29.0.0",
+    "ag-grid-enterprise": "^29.0.0",
+    "ag-grid-vue3": "^29.0.0",
     "ant-design-vue": "^3.2.15",
     "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
