--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,7 @@ django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
+greenlet==2.0.2
 idna==3.4
 itypes==1.2.0
 Jinja2==3.1.2
@@ -30,8 +31,10 @@ requests-oauthlib==1.3.1
 six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.3.0
+SQLAlchemy==2.0.4
 sqlparse==0.4.3
 tomli==2.0.1
+typing_extensions==4.5.0
 tzdata==2022.4
 uritemplate==4.1.1
 urllib3==1.26.12
